Fixed 'fermé' being nearly invisible

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -12,7 +12,7 @@
   }
 
   .text-red-no {
-    color: #E30B0B;
+    color: #FF0000;
   }
 
 
